# Siniestros_viales_LLM

./: README.md  prompt_v1  prompt_v3.txt  pyproject.toml  requirements.txt
news/news/: sample_primera_edicion_siniestros_viales_2024.json
python_scripts/: compare_results.py
results/results/: deepseek-r1:8b_result.json
src/extrai/post-processing/: data_cleaning.py
src/extrai/prompts/: prompt_v2.txt  prompt_v3.txt  prompt_v3_uc.txt
