[project]
name = "extrai"
version = "0.1.0"
description = ""
authors = [
    {name = "Felipe Sodré",email = "felipe.b4rros@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ollama-batch (>=0.1.3,<0.2.0)",
    "pandas (>=2.3.3,<3.0.0)"
]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
